apps/oauth2-servers/base/authorization-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-server
  labels:
    app: authorization-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization-server
  template:
    metadata:
      labels:
        app: authorization-server
    spec:
      containers:
        - name: authorization-server
          image: ythwork/authorization-server:1.5.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: jwt-key
              mountPath: /etc/keys
              readOnly: true
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
      volumes:
        - name: jwt-key
          secret:
            secretName: auth-jwt-key
