apps/oauth2-servers/base/resource-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-server
  labels:
    app: resource-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-server
  template:
    metadata:
      labels:
        app: resource-server
    spec:
      containers:
        - name: resource-server
          image: ythwork/resource-server:1.0.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10
