apps/oauth2-servers/base/authorization-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorization-server
  labels:
    app: authorization-server
spec:
  type: ClusterIP
  selector:
    app: authorization-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
