apps/oauth2-servers/base/resource-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: auth
  name: resource-server
  labels:
    app: resource-server
spec:
  type: ClusterIP
  selector:
    app: resource-server
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
