apps/oauth2-servers/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: auth.ythwork.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authorization-server
                port:
                  number: 80

    - host: resource.ythwork.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resource-server
                port:
                  number: 80
